<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="shortcut_add_event"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_add"
        android:shortcutShortLabel="@string/shortcut_add_event_short"
        android:shortcutLongLabel="@string/shortcut_add_event_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.monsivamon.golender"
            android:targetClass="com.monsivamon.golender.MainActivity">
            <extra
                android:name="com.monsivamon.golender.EXTRA_SHORTCUT_ACTION"
                android:value="add_event" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_today"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_today"
        android:shortcutShortLabel="@string/shortcut_today_short"
        android:shortcutLongLabel="@string/shortcut_today_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.monsivamon.golender"
            android:targetClass="com.monsivamon.golender.MainActivity">
            <extra
                android:name="com.monsivamon.golender.EXTRA_SHORTCUT_ACTION"
                android:value="today" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.monsivamon.golender"
            android:targetClass="com.monsivamon.golender.MainActivity">
            <extra
                android:name="com.monsivamon.golender.EXTRA_SHORTCUT_ACTION"
                android:value="search" />
        </intent>
    </shortcut>

</shortcuts>